# MinakSeran

./: LICENSE.md  README.md  dataset_seram_geser.csv  experiment.ipynb  pyproject.toml  pyproject.toml   setup.py
geser_tokenizer/: __init__.py  find_words.py  paragog_normaliser.py  tokenizer.py
seram_tokenizer/: __init__.py  find_reduplication.py  paragog_normaliser.py  prefix_analyser.py  suffix_analayser.py  tokenizer.py
seram_tokenizer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
seram_tokenizer/data/: geser_word.txt  pronounce.txt
tests/: test_tokenizer.py
utils/: find_reduplication.py  geser_tokenizer.py
utils/data/: geser_word.txt
