# pyproject.toml
[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seram_tokenizer"
version = "1.1.0"
description = "Tokenizer for Seram (Geser, Gorom) language"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" } # Asumsi Anda menggunakan lisensi MIT, atau jika ada file LICENSE, bisa { file = "LICENSE" }

keywords = ["tokenizer", "seram", "geser", "gorom", "language processing"]

authors = [
    { name = "Abdul Wahid Rukua", email = "rukuaabdulwahid@gmail.com" },
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "regex", # Ini adalah install_requires Anda
]

[project.urls]
"Homepage" = "https://github.com/Airukua/MinakSeran.git"
"Bug Tracker" = "https://github.com/Airukua/MinakSeran.git/issues"
"Source Code" = "https://github.com/Airukua/MinakSeran.git"

# Konfigurasi Setuptools khusus, termasuk package_data
[tool.setuptools.package-data]
"seram_tokenizer" = ["data/*"]
